--- a/style.css
+++ b/style.css
@@ -39,11 +39,13 @@
     border: 2px solid rgb(211, 211, 211);
     background-color: #ffffffe0;
     width: 100%;
+    transition: all 0.1s linear;
 }
 
 .input:focus{
     outline: none;
     border: 2px solid #fff;
+    background-color: #fff;
 }
 
 .name{
